# AgenticSupply

./: .gitignore  README.md  manifest.hocon  pyproject.toml
data/: ddl_index.faiss  ddl_metadata.json  shipment.db  sql_index.faiss  sql_index_metadata.json  sql_metadata.json
docs/: causal_analysis_use_cases.ipynb  causal_model_evaluation.ipynb  example.py  exploratory_analysis.ipynb
src/agentic_supply/: manifest.hocon
src/agentic_supply/agentic_causality/: agentic_causality.hocon  causal_graph_tools.py  causal_model_tools.py  causal_task_tools.py  data_tools.py
src/agentic_supply/agentic_logistics/: agentic_logistics.hocon  graph_generator.py  land_routes_planner.py  manifest.hocon  manufacturing_coordinator.py  model_fitter_evaluator.py  ocean_routes_planner.py  ports_monitor.py  shipment_planner.py  supply_chain_explorer.hocon
src/agentic_supply/carrier_assistant/: shipment_routing.py  transit_querying.py
src/agentic_supply/causality_assistant/: causal_analysis.py  causal_graph.py  causal_graph_generation.py  causal_model.py  causal_model_creation.py  causal_model_fitting_evaluation.py  causal_tasks.py
src/agentic_supply/data/: __init__.py  anomalous_example_data.csv  anomalous_online_shop_data.csv  counterfactual_example_data.csv  customer_facilities.json  data_generation.py  distribution_change_example_data.csv  example_data.csv  example_data_model.pkl  land_routes.json  medical_case_counterfactual_data.csv  medical_case_data.csv  medical_case_model.pkl  microservices_latencies_data.csv  microservices_latencies_model.pkl  microservices_latencies_outlier_data.csv  mini_data.csv  mini_data_model.pkl  ocean_routes.json  online_shop_data.csv  online_shop_data_model.pkl  ports.json  products.json  sites.json  supply_chain_logistics_model.pkl
src/agentic_supply/data_assistant/: data_downloading.py
src/agentic_supply/inventory_assistant/: stock_monitoring.py
src/agentic_supply/manufacturing_assistant/: scheduling_notifying.py
src/agentic_supply/sql_assistant/: base.py  sample.py  sql_db.py
src/agentic_supply/supply_chain_explorer/: agentic_logistics.hocon  data_downloader.py  graph_generator.py  inventory_monitor.py  land_routes_planner.py  manifest.hocon  manufacturing_coordinator.py  ocean_routes_planner.py  supply_chain_explorer.hocon
src/agentic_supply/utilities/: config.py  data_utils.py  log_utils.py  sample.py
