[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_supply"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
dependencies = [
    "dowhy==0.13",
    "neuro-san==0.5.47",
]

[project.optional-dependencies]
dev = [
  "azure-ai-ml==1.28.1",
]

[tool.ruff]
line-length = 140

[tool.ruff.format]
exclude = ["*.yml", "*.yaml"]