[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_supply"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
dependencies = [
    "cdt==0.6.0",
    "dowhy==0.13",
    "faiss-cpu==1.11.0.post1",
    "neuro-san @ git+https://github.com/cognizant-ai-lab/neuro-san.git", # to get the latest build, which includes fixes for Windows (psutils instead of resource, log file location)
    "plotly==5.22.0",
    "python-dotenv==1.0.1",
    "openai==1.97.1",
    "seaborn==0.13.2",
    "sentence-transformers==5.0.0",
    "vanna==0.7.9"
]

[project.optional-dependencies]
dev = [
  "azure-ai-ml==1.28.1",
  "pip-system-certs==5.2" # to solve ssl certificate issues in Python 3.6+
]

[tool.hatch.metadata] 
allow-direct-references = true # for enabling pip install from git

[tool.ruff]
line-length = 140

[tool.ruff.format]
exclude = ["*.yml", "*.yaml"]